# Kanpsack-Parallel

./: CMakeLists.txt  Readme  knapsack_parallel  knapsack_serial  parallel_results  parallel_results.txt  serial_results  serial_results.txt
output/: parallel_results.cpp  serial_results.cpp
src/: knapsack_parallel.cpp  knapsack_serial.cpp
